Optimize notebook for 8GB RAM: reduce model size, fix file names, update configs

--- a/Gemma3_270M_Jetson.ipynb
+++ b/Gemma3_270M_Jetson.ipynb
@@ -153,7 +153,7 @@
    "source": [
     "# Load the train and validation data\n",
     "train_data = np.memmap('train.bin', dtype=np.uint16, mode='r')\n",
-    "val_data = np.memmap('val.bin', dtype=np.uint16, mode='r')\n",
+    "val_data = np.memmap('validation.bin', dtype=np.uint16, mode='r')\n",
     "\n",
     "def get_batch(split):\n",
     "    data = train_data if split == 'train' else val_data\n",
@@ -166,7 +166,7 @@
     "    out = {}\n",
     "    model.eval()\n",
     "    with torch.inference_mode():\n",
-    "        for split in ['train', 'val']:\n",
+    "        for split in ['train', 'validation']:\n",
     "            losses = torch.zeros(eval_iters)\n",
     "            for k in range(eval_iters):\n",
     "                X, Y = get_batch(split)\n",
@@ -263,12 +263,12 @@
     "        return idx\n",
     "\n",
     "GEMMA3_CONFIG_270M = {\n",
-    "    \"vocab_size\": 256000,\n",
-    "    \"emb_dim\": 1152,\n",
-    "    \"n_layers\": 18,\n",
+    "    \"vocab_size\": 50257,\n",
+    "    \"emb_dim\": 512,\n",
+    "    \"n_layers\": 6,\n",
     "    \"n_heads\": 8,\n",
-    "    \"head_dim\": 144,\n",
-    "    \"context_length\": 8192,\n",
+    "    \"head_dim\": 64,\n",
+    "    \"context_length\": 1024,\n",
     "    \"norm_eps\": 1e-6,\n",
     "    \"rope_base\": 10000,\n",
     "    \"dtype\": torch.float32\n",
@@ -297,13 +297,13 @@
    "source": [
     "# Training Config - Optimized for CPU on Jetson\n",
     "learning_rate = 1e-4\n",
-    "max_iters = 1000  # Reduced for CPU testing\n",
-    "warmup_steps = 50\n",
+    "max_iters = 100  # Further reduced for testing\n",
+    "warmup_steps = 10\n",
     "min_lr = 5e-4\n",
-    "eval_iters = 50\n",
+    "eval_iters = 10\n",
     "batch_size = 1  # Reduced for CPU\n",
-    "block_size = 32  # Reduced for CPU\n",
-    "gradient_accumulation_steps = 4  # Reduced for CPU\n",
+    "block_size = 16  # Reduced for CPU\n",
+    "gradient_accumulation_steps = 2  # Reduced for CPU\n",
     "\n",
     "device = \"cpu\"\n",
     "device_type = 'cpu'\n",
